--- a/AdvancedModel.ipynb
+++ b/AdvancedModel.ipynb
@@ -314,7 +314,9 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "15/50 [========>.....................] - ETA: 3:16 - loss: 1.7322 - accuracy: 0.2167"
+      "50/50 [==============================] - 265s 5s/step - loss: 1.5796 - accuracy: 0.3122 - val_loss: 1.6329 - val_accuracy: 0.1250\n",
+      "Epoch 2/10\n",
+      "39/50 [======================>.......] - ETA: 52s - loss: 1.3790 - accuracy: 0.4118"
      ]
     }
    ],
